--- a/app/src/main/res/layout/activity_starting_point.xml
+++ b/app/src/main/res/layout/activity_starting_point.xml
@@ -37,7 +37,7 @@
         android:layout_height="0.5dp"
         android:layout_marginBottom="@dimen/material_margin_medium"
         android:background="#9e9e9e"
-        app:layout_constraintBottom_toTopOf="@id/ivSend"
+        app:layout_constraintBottom_toTopOf="@id/etMessage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
