--- a/hzaun-app-base/src/main/res/drawable/hz_round_outline.xml
+++ b/hzaun-app-base/src/main/res/drawable/hz_round_outline.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary" />
+        android:color="@color/black" />
 
     <corners android:radius="8dp" />
 </shape>
